src/objects/ensxapp__SAP_Delivery_Search_Preset_Parameter__mdt.object
<CustomObject>
    <description>Defines one field of search criteria for a SAP Delivery Search Preset</description>
    <fields>
        <fullName>ensxapp__Custom_Field_Name__c</fullName>
        <description>The name of the field for a custom input field</description>
        <inlineHelpText>The SAP field name for a custom field. This is only used if &quot;Is Custom&quot; is checked</inlineHelpText>
        <label>Custom Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this condition is a standard field or a custom field</description>
        <inlineHelpText>Whether this is a stock field, or a user defined custom field</inlineHelpText>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Mapped_Field__c</fullName>
        <description>The field to map search parameter to when Parameter Type is Mapped Field</description>
        <label>Mapped Field</label>
        <metadataRelationshipControllingField>ensxapp__SAP_Delivery_Search_Preset_Parameter__mdt.ensxapp__Mapped_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>SAP_Delivery_Search_Preset_Parameters</relationshipLabel>
        <relationshipName>SAP_Delivery_Search_Preset_Parameters</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Mapped_Object__c</fullName>
        <description>The Object type to map to when Parameter Type is Mapped Field</description>
        <inlineHelpText>This should only be set if the Parameter Type is &quot;Mapped Field&quot;</inlineHelpText>
        <label>Mapped Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>SAP_Delivery_Search_Preset_Parameters</relationshipLabel>
        <relationshipName>SAP_Delivery_Search_Preset_Parameters</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Parameter_Type__c</fullName>
        <defaultValue>&apos;Static Text&apos;</defaultValue>
        <description>The type of parameter mapping to use</description>
        <inlineHelpText>Defines how the search criteria is specified</inlineHelpText>
        <label>Parameter Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static Text</fullName>
                    <default>true</default>
                    <label>Static Text</label>
                </value>
                <value>
                    <fullName>Mapped Field</fullName>
                </value>
                <value>
                    <fullName>SAP Customer Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Delivery_Search_Preset__c</fullName>
        <description>The preset this Search Parameter is attached to</description>
        <label>SAP Delivery Search Preset</label>
        <referenceTo>ensxapp__SAP_Delivery_Search_Preset__mdt</referenceTo>
        <relationshipLabel>SAP Delivery Search Preset Parameters</relationshipLabel>
        <relationshipName>SAP_Delivery_Search_Preset_Parameters</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Field__c</fullName>
        <description>The Delivery field we are defining search criteria for</description>
        <inlineHelpText>The stock SAP field for this parameter</inlineHelpText>
        <label>SAP Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ShipToParty</fullName>
                    <label>Ship To Party</label>
                </value>
                <value>
                    <fullName>SoldToParty</fullName>
                    <label>Sold To Party</label>
                </value>
                <value>
                    <fullName>FromCreateDate</fullName>
                    <label>From Create Date</label>
                </value>
                <value>
                    <fullName>ToCreateDate</fullName>
                    <label>To Create Date</label>
                </value>
                <value>
                    <fullName>DeliveryDateFrom</fullName>
                    <label>Delivery Date From</label>
                </value>
                <value>
                    <fullName>DeliveryDateTo</fullName>
                    <label>Delivery Date To</label>
                </value>
                <value>
                    <fullName>PGIDateFrom</fullName>
                    <label>PGI Date From</label>
                </value>
                <value>
                    <fullName>PGIDateTo</fullName>
                    <label>PGI Date To</label>
                </value>
                <value>
                    <fullName>Route</fullName>
                </value>
                <value>
                    <fullName>ShippingPoint</fullName>
                    <label>Shipping Point</label>
                </value>
                <value>
                    <fullName>DeliveryPriority</fullName>
                    <label>Delivery Priority</label>
                </value>
                <value>
                    <fullName>ShippingConditions</fullName>
                    <label>Shipping Conditions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ensxapp__Value__c</fullName>
        <description>The search criteria value to use when Parameter Type is set to Static Text, SAP List, or Formula</description>
        <inlineHelpText>This should only be populated if the Parameter Type is &quot;Static Text&quot;</inlineHelpText>
        <label>Static Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SAP Delivery Search Preset Parameter</label>
    <pluralLabel>SAP Delivery Search Preset Parameters</pluralLabel>
    <validationRules>
        <fullName>ensxapp__Custom_field_name_required</fullName>
        <active>true</active>
        <description>If this is a custom field, a custom field name must be specified</description>
        <errorConditionFormula>IF(
ensxapp__Custom__c &amp;&amp; ISBLANK( ensxapp__Custom_Field_Name__c )
, true
, false)</errorConditionFormula>
        <errorDisplayField>ensxapp__Custom_Field_Name__c</errorDisplayField>
        <errorMessage>If this is a custom field, the custom field name is required. Either enter a field name or un-check the &quot;Is Custom&quot; box</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ensxapp__Standard_Field_Required</fullName>
        <active>true</active>
        <description>If this is a standard field, an SAP field needs to be selected</description>
        <errorConditionFormula>IF( NOT(ensxapp__Custom__c) &amp;&amp; ISBLANK(TEXT( ensxapp__SAP_Field__c ))
, true
, false)</errorConditionFormula>
        <errorDisplayField>ensxapp__SAP_Field__c</errorDisplayField>
        <errorMessage>A &quot;SAP Field&quot; must be selected if this is a standard parameter.</errorMessage>
    </validationRules>
</CustomObject>